sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:14: error: '<-' expected but ')' found.
    for (compteur-<i to lgr-1){
                             ^AlgSelectionSort:25: error: illegal start of simple expression
  }
  ^